고도화 진행중